@@ -2,18 +2,26 @@ package kr.co.module.api.Service;
 
 import kr.co.module.api.admin.dto.AdminReservationSearchDto;
 import kr.co.module.api.admin.dto.AdminReservationUpdateDto;
+import kr.co.module.api.admin.service.AdminCategoryService;
 import kr.co.module.api.admin.service.AdminReservationService;
 import kr.co.module.core.dto.domain.ProductDto;
 import kr.co.module.core.dto.domain.ReservationDto;
+import kr.co.module.core.exception.ReservationNotFoundException;
+import kr.co.module.mapper.repository.AdminCategoryRepository;
+import kr.co.module.mapper.repository.AdminProductRepository;
 import kr.co.module.mapper.repository.AdminReservationRepository;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Query;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,15 +30,24 @@ import static org.mockito.Mockito.*;
 
 
 public class AdminReservationServiceTest {
+    @Mock
     private MongoTemplate mongoTemplate;
-    private AdminReservationRepository adminReservationRepository;
+
+    @InjectMocks
     private AdminReservationService adminReservationService;
+
+    @Mock
+    AdminReservationRepository adminReservationRepository;
+    @Mock
+    AdminProductRepository adminProductRepository;
 
     @BeforeEach
     void setUp() {
         mongoTemplate = mock(MongoTemplate.class);
         adminReservationRepository = mock(AdminReservationRepository.class);
-        adminReservationService = new AdminReservationService(adminReservationRepository, mongoTemplate);
+        adminProductRepository = mock(AdminProductRepository.class);
+
+        adminReservationService = new AdminReservationService(mongoTemplate, adminReservationRepository, adminProductRepository);
     }
 
     @Test
@@ -44,8 +61,14 @@ public class AdminReservationServiceTest {
         ReservationDto reservation = new ReservationDto();
         reservation.setReservationId("1");
         reservation.setReservationStatus("PENDING");
+        reservation.setProductId("product123");  // 추가: 상품 ID 설정
+
+        ProductDto product = new ProductDto();
+        product.setProductId("product123");
+        product.setCrtrId("admin1");  // 상품 생성자를 admin1로 설정
 
         when(adminReservationRepository.findById("1")).thenReturn(Optional.of(reservation));
+        when(adminProductRepository.existsByProductIdAndCrtrId("product123", "admin1")).thenReturn(true);  // 권한 검증 통과
         when(adminReservationRepository.save(any(ReservationDto.class))).thenReturn(reservation);
 
         // when
@@ -54,9 +77,8 @@ public class AdminReservationServiceTest {
         // then
         assertNotNull(result);
         assertEquals("CONFIRMED", result.getReservationStatus());
-        assertEquals("admin1", result.getAmnrId());
-        assertNotNull(result.getAmndDttm());
         verify(adminReservationRepository).save(reservation);
+
     }
 
     @Test
@@ -66,11 +88,10 @@ public class AdminReservationServiceTest {
         updateDto.setReservationId("999");
         when(adminReservationRepository.findById("999")).thenReturn(Optional.empty());
 
-        // when
-        ReservationDto result = adminReservationService.updateReservationStatus(updateDto);
+        // when & then
+        assertThrows(ReservationNotFoundException.class,
+                () -> adminReservationService.updateReservationStatus(updateDto));
 
-        // then
-        assertNull(result);
         verify(adminReservationRepository, never()).save(any());
     }
 
@@ -93,9 +114,9 @@ public class AdminReservationServiceTest {
         r1.setProductId("10");
 
         when(mongoTemplate.find(any(Query.class), eq(ProductDto.class)))
-                .thenReturn(Arrays.asList(p1));
+                .thenReturn(Collections.singletonList(p1));
         when(mongoTemplate.find(any(Query.class), eq(ReservationDto.class)))
-                .thenReturn(Arrays.asList(r1));
+                .thenReturn(List.of(r1));
 
         // when
         List<ReservationDto> result = adminReservationService.searchAdminReservations(searchDto);
@@ -103,20 +124,8 @@ public class AdminReservationServiceTest {
         // then
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(100L, result.get(0).getReservationId());
+        assertEquals("100", result.get(0).getReservationId());
 
-        // 쿼리 내부 조건 검증 (선택)
-        ArgumentCaptor<Query> prodQueryCaptor = ArgumentCaptor.forClass(Query.class);
-        verify(mongoTemplate).find(prodQueryCaptor.capture(), eq(ProductDto.class));
-        Query usedProductQuery = prodQueryCaptor.getValue();
-        assertTrue(usedProductQuery.toString().contains("crtrId"));
-        assertTrue(usedProductQuery.toString().contains("productId"));
-        assertTrue(usedProductQuery.toString().contains("categoryId"));
-
-        ArgumentCaptor<Query> resvQueryCaptor = ArgumentCaptor.forClass(Query.class);
-        verify(mongoTemplate).find(resvQueryCaptor.capture(), eq(ReservationDto.class));
-        Query usedReservationQuery = resvQueryCaptor.getValue();
-        assertTrue(usedReservationQuery.toString().contains("productId"));
     }
 
     @Test
@@ -128,7 +137,7 @@ public class AdminReservationServiceTest {
         searchDto.setCategoryId("0");
 
         when(mongoTemplate.find(any(Query.class), eq(ProductDto.class)))
-                .thenReturn(Arrays.asList());
+                .thenReturn(List.of());
 
         // when
         List<ReservationDto> result = adminReservationService.searchAdminReservations(searchDto);
